After subtracting what Markus has done, what remains is only removing glut as a required library since it is only used by rcssmonitor3d-lite! :)

--- a/ChangeLog
+++ b/ChangeLog
@@ -1,3 +1,11 @@
+2008-02-27  Hedayat Vatankhah  <hedayat@grad.com>
+
+	* acinclude.m4:
+	* app/rcssmonitor3d/lite/Makefile.am:
+	- glut is not a requirement now. when not found, rcssmonitor3d-lite won't be
+	  built. (for non-macs)
+	- added check for GLU (for non-macs)
+
 2008-02-26  Hedayat Vatankhah  <hedayat@grad.com>
 
 	* app/rsgedit/Makefile.am:
